# MHY_Scanner

./: .gitignore  CMakeLists.txt  README.md
cmake/: install_ffmpeg.cmake
src/Core/: ApiDefs.hpp  ConfigDate.cpp  LiveStreamLink.cpp  MhyApi.hpp  QRScanner.cpp  QRScanner.h  ScannerBase.hpp  UrlQuery.hpp
src/Resources/: MHY_Scanner.rc
src/UI/: QRCodeForScreen.cpp  QRCodeForScreen.h  QRCodeForStream.cpp  QRCodeForStream.h  WindowAbout.cpp  WindowLogin.cpp  WindowMain.cpp  WindowMain.h  WindowMain.ui
